charts/istio-addons/observability-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: observability-vs
  namespace: istio-system
spec:
  hosts:
  - "dev.anuragnandre.online"
  gateways:
  - istio-system/observability-gateway
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali
        port:
          number: 20001
  - match:
    - uri:
        prefix: /grafana
    route:
    - destination:
        host: grafana
        port:
          number: 3000
  - match:
    - uri:
        prefix: /prometheus
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: rag-service.webapp-consumer.svc.cluster.local
        port:
          number: 8501
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: observability-vs
#   namespace: istio-system
# spec:
#   gateways:
#     - observability-gateway
#   hosts:
#   - dev.anuragnandre.online
#   http:
#   - name: grafana
#     route:
#     - destination:
#         host: grafana.istio-system.svc.cluster.local
#         port:
#           number: 3000
#   tls:
#   - match:
#     - port: 443
#       sniHosts:
#       - dev.anuragnandre.online
#     route:
#     - destination:
#         host: grafana.istio-system.svc.cluster.local
#         port:
#           number: 3000

# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: grafana-vs
#   namespace: istio-system
# spec:
#   hosts:
#     - grafana.istio-system.svc.cluster.local
#   gateways:
#     - observability-gateway
#   http:
#     - match:
#       - port: 80
#       redirect:
#         uri: https://grafana.dev.anuragnandre.online
#         port: 443
#     - route:
#         - destination:
#             host: grafana.istio-system.svc.cluster.local
#             port:
#               number: 80
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: grafana
#   namespace: istio-system
# spec: 
#   host: grafana.istio-system.svc.cluster.local
#   trafficPolicy:
#     tls:
#       mode: DISABLE
